# ntu-mir-2025

./: .gitignore
hw1/: CLAUDE.md  README.md  check_test_accuracy.py  count_score.py  create_consistent_dataset.py  gen_resnet_architecture.py  gen_tsne_resnet.py  get_dataset.sh  r14921046.json  r14921046_wo_pretrain.json  report.md  requirements.txt  task1_augmentation.py  (+16 more)
hw2/: CLAUDE.md  get_dataset.sh  pyproject.toml  report.md  report_hw2.md  requirements.txt
hw2/task1/: README.md  retrieval.py  run_retrieval.py  visualize_results.py
hw2/task1/cache/: embeddings_CLAPEncoder.npz  embeddings_MuQEncoder.npz  embeddings_Music2LatentEncoder.npz
hw2/task1/encoders/: base_encoder.py  clap_encoder.py  muq_encoder.py  music2latent_encoder.py
hw2/task1/metrics/: aesthetics_metric.py  clap_metric.py  melody_metric.py
hw2/task2/: README.md  USAGE.md  create_visualizations.py  evaluate_generated.py  evaluate_melody_only.py  evaluate_simple.py  generation_log_simple.txt  run_generation.py  simple_text2music.py
hw2/task2/cache/: captions_qwen.json
hw2/task2/captioning/: base_captioner.py  qwen_captioner.py
hw2/task2/features/: chord_extractor.py  melody_extractor.py  rhythm_extractor.py
hw2/task2/generation/: __init__.py  base_generator.py  musicgen_generator.py
hw2/task2/metrics/: __init__.py
hw3/: .gitignore  CLAUDE.md  pyproject.toml  report.md
hw3/src/: convert_mid_to_wav.py  create_visualizations.py  dataset.py  eval.py  preprocess.py  task1.py  task2.py  task2_3sets.py  train.py
hw3/src/scripts/: task1.sh  task2.sh
hw3/src/src/: trainer.py
(+3 files in other folders)
