[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "audiobox-aesthetics>=0.0.4",
    "audiocraft>=1.1.0",
    "laion-clap>=1.1.5",
    "librosa>=0.11.0",
    "numpy>=2.3.3",
    "ruff>=0.14.0",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]
