[project]
name = "hw3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "miditoolkit>=1.0.1",
    "miditok>=3.0.0",
    "numpy==1.23.5",
    "torch==2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "ruff>=0.1.0",
]
